[project]
name = "inference-development"
description = "Inference turns any computer or edge device into a command center for your computer vision projects"
authors = [{ name = "Roboflow", email = "help@roboflow.com" }]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

# Core dependencies
dependencies = [
    "PyYAML~=6.0.0",
    "accelerate>=0.25.0,<=0.32.1",
    "transformers>=4.41.1",
    "pandas>=2.0.0,<2.3.0",
    "requests",
    "opencv-python>=4.8.1.78,<=4.10.0.84",
    "onnxruntime-gpu>=1.15.1,<1.20.0",
    "xformers",
    "backoff~=2.2.0",
    "py-cpuinfo~=9.0.0",
    "python-dotenv<=2.0.0",
    "pytest",
    "einops>=0.7.0,<=0.8.0",
    "torchvision>=0.15.0",
    "rf-clip==1.1",
    "requests_toolbelt",
    "numpy<=1.26.4",
    "supervision>=0.25.1,<=0.30.0",
    "nvidia-ml-py<13.0.0",
    "pybase64~=1.0.0",
    "pillow",
    "aiohttp>=3.9.0,<=3.10.11",
    "rich>=13.0.0,<13.10.0",
    "httpx>=0.25.1,<0.28.0",
    "torch>=2.0.1,<=2.4.0",
]

[project.optional-dependencies]
cloud_deploy = ["skypilot[aws,gcp]==0.5.0", "cryptography>=43.0.1"]
code_analysis = ["flake8==7.0.0", "black==24.3.0", "isort==5.13.2"]
test-unit = [
    "pytest-timeout>=2.2.0",
    "aioresponses>=0.7.6",
    "requests-mock==1.11.0",
    "pytest-asyncio<=0.21.1",
    "uvicorn<=0.22.0",
]
cli = [
    "tqdm>=4.0.0,<5.0.0",
    "typer>=0.9.0,<=0.12.5",
    "docker>=7.0.0,<8.0.0",
    "rich~=13.0.0",
]
container = ["setuptools<76.0.0", "jupyterlab<4.4.0"]
docs = [
    "mkdocs-jupyter",
    "mkdocs",
    "mistune==2.0.4",
    "mike",
    "nbconvert==7.7.4",
    "mkdocs-literate-nav",
    "mkdocs-material",
    "cairosvg",
    "mkdocs-gen-files",
    "mkdocs-ezlinks-plugin",
    "mkdocs-swagger-ui-tag",
    "mkdocs-macros-plugin",
    "mkdocstrings[python]",
    "mkdocs-material[imaging]",
]
doctr = ["tf2onnx~=1.16.0", "python-doctr[torch]>=0.7.0,<=0.10.0"]
jetson = ["pypdfium2~=4.0.0", "jupyterlab>=4.3.0,<5.0.0"]
waf = ["metlo>=0.0.17,<=0.1.5"]
transformers = ["timm~=1.0.0", "peft~=0.11.1"]
cpu = ["onnxruntime>=1.15.1,<1.20.0"]
gaze = ["mediapipe>=0.9"]
hosted = ["elasticache_auto_discovery~=1.0.0", "pymemcache~=4.0.0"]
parallel = ["celery>=5.4.0,<6.0.0", "gunicorn~=23.0.0"]
test-integration = ["pytest-retry<=1.6.3"]
sam = ["rasterio~=1.3", "rf-segment-anything==1.0", "samv2==0.0.4"]
vino = ["onnxruntime-openvino>=1.15.0,<1.20.0"]
groundingdino = ["rf_groundingdino==0.2.0"]
cogvlm = ["bitsandbytes<=0.41.3", "sentencepiece<=0.1.99"]
sdk-http = ["dataclasses-json~=0.6.0"]
yolo_world = ["dill<0.4.0", "ultralytics<8.4.0"]
http = [
    "fastapi-cprofile<=0.0.2",
    "python-multipart<0.1.0",
    "asgi_correlation_id~=4.3.4",
    "uvicorn[standard]<1.0.0",
    "orjson>=3.9.10,<=3.11.0",
]
pali-flash-attn = ["flash-attn==2.5.9.post1"]

[project.scripts]
inference = "inference_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "inference/core/version.py"
expression = "__version__"

[tool.hatch.build.targets.wheel]
packages = ["inference"]
exclude = [
    "docker",
    "docs",
    "requirements",
    "tests",
    "tests.*",
    "development",
    "development.*",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
compile-bytecode = true

[tool.isort]
profile = "black"
skip = ["**/__init__.py", "**/node_modules/**"]

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[project.urls]
Homepage = "https://github.com/roboflow/inference"
