[project]
name = "inference-model-manager"
version = "0.1.0"
description = "Orchestrated model management: SHM pools, subprocess workers, ZMQ routing, batched GPU inference"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "inference-models",
  "numpy",
  "pyzmq>=26.0.0,<28.0.0",
  "psutil>=5.9.0",
  "pillow-heif>=0.18.0",
  "imagecodecs",
]

[project.optional-dependencies]
# Runtime extras — each pulls the matching inference-models variant
torch-cpu = ["inference-models[torch-cpu]"]
torch-cu118 = ["inference-models[torch-cu118]"]
torch-cu124 = ["inference-models[torch-cu124]"]
torch-cu126 = ["inference-models[torch-cu126]"]
torch-cu128 = ["inference-models[torch-cu128]"]
torch-cu130 = ["inference-models[torch-cu130]"]
torch-jp6-cu126 = ["inference-models[torch-jp6-cu126]"]
onnx-cpu = ["inference-models[onnx-cpu]"]
onnx-cu118 = ["inference-models[onnx-cu118]"]
onnx-cu12 = ["inference-models[onnx-cu12]"]
onnx-jp6-cu126 = ["inference-models[onnx-jp6-cu126]"]
mediapipe = ["inference-models[mediapipe]"]
trt10 = ["inference-models[trt10]"]
cuda = [
  "pycuda>=2025.0.0,<2026.0.0; platform_system != 'darwin' and python_version >= '3.10'",
  "nvidia-ml-py>=12.0.0",
]
test = [
  "pytest>=8.0.0",
  "pytest-timeout>=2.3.0",
  "pytest-xdist>=3.0.0",
]

[tool.uv.sources]
torch = [
  { index = "torch-cpu", extra = "torch-cpu" },
  { index = "torch-cu118", extra = "torch-cu118" },
  { index = "torch-cu124", extra = "torch-cu124" },
  { index = "torch-cu128", extra = "torch-cu128" },
  { index = "torch-cu130", extra = "torch-cu130" },
  { index = "jp6-cu126", extra = "torch-jp6-cu126" },
]
torchvision = [
  { index = "torch-cpu", extra = "torch-cpu" },
  { index = "torch-cu118", extra = "torch-cu118" },
  { index = "torch-cu124", extra = "torch-cu124" },
  { index = "torch-cu128", extra = "torch-cu128" },
  { index = "torch-cu130", extra = "torch-cu130" },
  { index = "jp6-cu126", extra = "torch-jp6-cu126" },
]
onnxruntime-gpu = [
  { index = "onnx-cu118", extra = "onnx-cu118" },
  { index = "jp6-cu126", extra = "onnx-jp6-cu126" },
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "torch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "torch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "torch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "torch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "jp6-cu126"
url = "https://pypi.jetson-ai-lab.io/jp6/cu126/+simple"
explicit = true

[tool.uv]
conflicts = [
  [
    { extra = "torch-cpu" },
    { extra = "torch-cu118" },
    { extra = "torch-cu124" },
    { extra = "torch-cu126" },
    { extra = "torch-cu128" },
    { extra = "torch-cu130" },
    { extra = "torch-jp6-cu126" },
  ],
  [
    { extra = "onnx-cpu" },
    { extra = "onnx-cu118" },
    { extra = "onnx-cu12" },
    { extra = "onnx-jp6-cu126" },
  ],
]

[tool.setuptools.packages.find]
include = ["inference_model_manager*"]
exclude = ["tests*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
