[project]
name = "inference-server"
version = "0.1.0"
description = "FastAPI inference server — orchestrated client for inference-model-manager"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "inference-model-manager",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pyzmq>=26.0.0,<28.0.0",
  "orjson>=3.9.0",
  "filetype>=1.2.0",
  "aiohttp>=3.9.0",
]

[project.optional-dependencies]
# Runtime extras — each pulls the matching inference-model-manager (→ inference-models) variant
torch-cpu = ["inference-model-manager[torch-cpu]"]
torch-cu118 = ["inference-model-manager[torch-cu118]"]
torch-cu124 = ["inference-model-manager[torch-cu124]"]
torch-cu126 = ["inference-model-manager[torch-cu126]"]
torch-cu128 = ["inference-model-manager[torch-cu128]"]
torch-cu130 = ["inference-model-manager[torch-cu130]"]
torch-jp6-cu126 = ["inference-model-manager[torch-jp6-cu126]"]
onnx-cpu = ["inference-model-manager[onnx-cpu]"]
onnx-cu118 = ["inference-model-manager[onnx-cu118]"]
onnx-cu12 = ["inference-model-manager[onnx-cu12]"]
onnx-jp6-cu126 = ["inference-model-manager[onnx-jp6-cu126]"]
mediapipe = ["inference-model-manager[mediapipe]"]
trt10 = ["inference-model-manager[trt10]"]
test = [
  "pytest>=8.0.0",
  "pytest-timeout>=2.3.0",
]

[tool.uv.sources]
torch = [
  { index = "torch-cpu", extra = "torch-cpu" },
  { index = "torch-cu118", extra = "torch-cu118" },
  { index = "torch-cu124", extra = "torch-cu124" },
  { index = "torch-cu128", extra = "torch-cu128" },
  { index = "torch-cu130", extra = "torch-cu130" },
  { index = "jp6-cu126", extra = "torch-jp6-cu126" },
]
torchvision = [
  { index = "torch-cpu", extra = "torch-cpu" },
  { index = "torch-cu118", extra = "torch-cu118" },
  { index = "torch-cu124", extra = "torch-cu124" },
  { index = "torch-cu128", extra = "torch-cu128" },
  { index = "torch-cu130", extra = "torch-cu130" },
  { index = "jp6-cu126", extra = "torch-jp6-cu126" },
]
onnxruntime-gpu = [
  { index = "onnx-cu118", extra = "onnx-cu118" },
  { index = "jp6-cu126", extra = "onnx-jp6-cu126" },
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "torch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "torch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "torch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "torch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "jp6-cu126"
url = "https://pypi.jetson-ai-lab.io/jp6/cu126/+simple"
explicit = true

[tool.uv]
conflicts = [
  [
    { extra = "torch-cpu" },
    { extra = "torch-cu118" },
    { extra = "torch-cu124" },
    { extra = "torch-cu126" },
    { extra = "torch-cu128" },
    { extra = "torch-cu130" },
    { extra = "torch-jp6-cu126" },
  ],
  [
    { extra = "onnx-cpu" },
    { extra = "onnx-cu118" },
    { extra = "onnx-cu12" },
    { extra = "onnx-jp6-cu126" },
  ],
]

[tool.setuptools.packages.find]
include = ["inference_server*"]
exclude = ["tests*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
